test/error/parse/ExpectStatement.mod
MODULE ExpectStatement;
BEGIN
  ,
END ExpectStatement.
